src/test/resources/type/bad/function-call-incorrect-return.fika
bool func s(){
    return 5; // should be invalid, s is a function that returns a bool, but 5 is an int
}